<resources>
    <string name="app_name">COMEL App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email_address_to_reset_your_password">Please enter your email address to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="menu_upper">Menu</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="username_email">Username/Email</string>
    <string name="notifications">Notifications</string>
    <string name="_0_new_notification">0 new notification</string>
    <string name="my_group">My Group</string>
    <string name="profile">Profile</string>
    <string name="detections">Detections</string>
    <string name="_0_new_detections">1 new detections</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="dash">-</string>
    <string name="notification">Notification</string>
    <string name="thumbnail">thumbnail</string>
    <string name="edit_profile">Edit</string>
    <string name="no_data_yet">No data yet</string>
    <string name="respond">Respond</string>
</resources>
