<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_username"
        style="@style/InputUnderline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_outline"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_password"
        style="@style/InputUnderline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_username"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvclick_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/field_password"
        android:layout_alignParentEnd="true"
        style="@style/TextPrimary"
        android:clickable="true"
        android:focusable="true"
        android:padding="3dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonPrimary"
        android:layout_below="@+id/tvclick_lupa_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_centerInParent="true"/>
</RelativeLayout>