<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.NotificationActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/menu_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="1dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_edit"
                style="@style/ButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_edit"
                android:drawablePadding="10dp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="User ID" />

                <TextView
                    android:id="@+id/tv_user_id"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/dash" />

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Username" />

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="-" />

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Name" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/dash" />

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Email" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/dash" />

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/phone_number" />

                <TextView
                    android:id="@+id/tv_phonenumber"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/dash" />

                <TextView
                    style="@style/TextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/TextPrimarySub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:gravity="start"
                    android:text="@string/dash" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>